syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "io/harness/delegate/delegate.proto";
import "io/harness/perpetualtask/perpetual_task.proto";

service PerpetualTaskService {
  rpc PerpetualTaskList(PerpetualTaskListRequest) returns (PerpetualTaskListResponse);
  rpc PerpetualTaskContext(PerpetualTaskContextRequest) returns (PerpetualTaskContextResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message PerpetualTaskListRequest {
  delegate.DelegateId delegate_id = 1;
}

message PerpetualTaskListResponse {
  repeated PerpetualTaskId task_ids = 1;
}

message PerpetualTaskContextRequest {
  PerpetualTaskId perpetual_task_id = 1;
}

message PerpetualTaskContextResponse {
  PerpetualTaskContext perpetual_task_context = 1;
}

message HeartbeatRequest {
  string id = 1;
  google.protobuf.Timestamp heartbeat_timestamp = 2;
  string task_state = 3;
  int32 response_code = 4;
  string response_message = 5;
}

message HeartbeatResponse {
}
