syntax = "proto3";

package io.harness.perpetualtask.connector;

option java_multiple_files = true;

message ConnectorHeartbeatTaskParams {
  string account_identifier = 1;
  string org_identifier = 2;
  string project_identifier = 3;
  string connector_identifier = 4;
  bytes connector_validation_params = 5;
}